src/snapshots/mylang__lexer__tests__lex_string.snap
---
source: src/lexer.rs
expression: lexer.lex()
---
- type: String
  loc:
    line: 1
    col: 0
  len: 5
  value:
    String: hello
- type: Eof
  loc:
    line: 1
    col: 8
  len: 0
  value: ~
