src/snapshots/mylang__lexer__tests__lex_two_numbers.snap
---
source: src/lexer.rs
expression: lexer.lex()
---
- type: Number
  loc:
    line: 1
    col: 0
  len: 4
  value:
    Number: 1234
- type: Number
  loc:
    line: 1
    col: 5
  len: 3
  value:
    Number: 500
- type: Eof
  loc:
    line: 1
    col: 8
  len: 0
  value: ~
